Ajustes no travis